the account handler change

--- a/src/classes/AccountHandler.cls
+++ b/src/classes/AccountHandler.cls
@@ -8,10 +8,14 @@ public class AccountHandler{
 		return queriedaccount;
             } catch (DmlException e) {
     System.debug('A DML exception has occurred: ' );
+     system.debug('i am the change');
                 return null;
-}
+
+
+               
         
 
     }
 
+}
 }
